videomixer2: avoid caps leak

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=693307